--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(bs_bbase_precise)
 export(clean_subnat_names)
 export(country_index_fun)
+export(flat_cor_mat)
 export(get_subnational_data)
 export(get_subnational_modelinputs)
 export(method_index_fun)
@@ -10,6 +11,8 @@ export(run_subnational_jags_model)
 export(standard_method_names)
 export(subnat_index_fun)
 import(R2jags)
+import(doMC)
+import(foreach)
 import(runjags)
 import(tidybayes)
 import(tidyverse)
