updates to code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(method_index_fun)
 export(run_subnational_jags_model)
 export(standard_method_names)
 export(subnat_index_fun)
+export(superregion_index_fun)
 import(R2jags)
 import(doMC)
 import(foreach)
