updates to code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(flat_cor_mat)
 export(get_subnational_data)
 export(get_subnational_modelinputs)
 export(method_index_fun)
+export(mstconnect)
 export(run_subnational_jags_model)
 export(standard_method_names)
 export(subnat_index_fun)
@@ -14,6 +15,9 @@ export(superregion_index_fun)
 import(R2jags)
 import(doMC)
 import(foreach)
+import(raster)
 import(runjags)
+import(sf)
+import(spdep)
 import(tidybayes)
 import(tidyverse)
