updates to code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(superregion_index_fun)
 import(R2jags)
 import(doMC)
 import(foreach)
-import(raster)
+import(geodata)
 import(runjags)
 import(sf)
 import(spdep)
