updates to code - get params and review visualisations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,21 +5,21 @@ Version: 0.1.0
 Author: Hannah Comiskey, Prof. Leontine Alkema, Dr. Niamh Cahill
 Maintainer: Hannah Comiskey <hannah.comiskey.2015@mumail.ie>
 Description: Estimates the proprotion of modern contraceptive supplied by the public and private sectors over time using demographic and health surveys. 
-We use Bayesian hierarchical modelling techiques to promote precisie estimation for subnational districts where there is little to no data present. The model also incorporates geographic data to have an optional spatial compomnent.
+    We use Bayesian hierarchical modelling techiques to promote precisie estimation for subnational districts where there is little to no data present. The model also incorporates geographic data to have an optional spatial compomnent.
 License: MIT
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat (>= 3.0.0)
-    R2jags 
-    runjags 
-    tidyverse 
-    tidybayes 
-    foreach 
-    doMC 
-    sf 
-    spdep 
-    geodata
+    testthat (>= 3.0.0),
+    R2jags (>= 0.7-1),
+    runjags (>= 2.2.1-7),
+    tidyverse (>= 2.0.0),
+    tidybayes (>= 3.0.3),
+    foreach (>= 1.5.2),
+    doMC (>= 1.3.8),
+    sf (>= 1.0-9),
+    spdep (>= 1.2-7),
+    geodata (>= 0.5-3)
 Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
