--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(bs_bbase_precise)
 export(clean_subnat_names)
 export(country_index_fun)
 export(flat_cor_mat)
+export(get_P_point_estimates)
+export(get_local_P_estimates)
+export(get_r_z_point_estimates)
 export(get_subnational_data)
 export(get_subnational_modelinputs)
 export(method_index_fun)
 export(mstconnect)
+export(plot_point_estimates)
 export(run_subnational_jags_model)
 export(standard_method_names)
 export(subnat_index_fun)
