updates to code for global estimation and plotting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,10 @@ export(clean_subnat_names)
 export(country_index_fun)
 export(flat_cor_mat)
 export(get_P_point_estimates)
+export(get_global_P_CM)
 export(get_global_P_estimates)
+export(get_global_P_other)
+export(get_global_P_public)
 export(get_global_P_samps)
 export(get_local_P_estimates)
 export(get_r_z_samples)
