updates to names for merge into national package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,19 @@ export(bs_bbase_precise)
 export(clean_subnat_names)
 export(country_index_fun)
 export(flat_cor_mat)
-export(get_P_point_estimates)
-export(get_global_P_CM)
-export(get_global_P_estimates)
-export(get_global_P_other)
-export(get_global_P_public)
-export(get_global_P_samps)
-export(get_local_P_estimates)
-export(get_r_z_samples)
+export(get_subnational_P_point_estimates)
 export(get_subnational_data)
+export(get_subnational_global_P_CM)
+export(get_subnational_global_P_estimates)
+export(get_subnational_global_P_other)
+export(get_subnational_global_P_public)
+export(get_subnational_global_P_samps)
+export(get_subnational_local_P_estimates)
 export(get_subnational_modelinputs)
+export(get_subnational_r_z_samples)
 export(method_index_fun)
 export(mstconnect)
-export(plot_point_estimates)
+export(plot_subnational_point_estimates)
 export(run_subnational_jags_model)
 export(standard_method_names)
 export(subnat_index_fun)
